# mandelbrot

./: .gitignore  CMakeLists.txt  main.c
include/: mandelbrot.h  mandelbrot_avx.h  mandelbrot_sse.h
src/: mandelbrot.c  mandelbrot_avx.c  mandelbrot_sse.c
